--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "connect-mongo": "^3.2.0",
         "connect-mongodb-session": "^2.2.0",
         "cookie-parser": "~1.4.4",
+        "csurf": "^1.11.0",
         "debug": "~2.6.9",
         "dotenv": "^16.0.3",
         "ejs": "~2.6.1",
@@ -33,9 +34,6 @@
         "request": "^2.88.0",
         "validator": "^12.0.0"
     },
-    "devDependencies": {
-        "nodemon": "^1.19.4"
-    },
     "description": "",
     "main": "src/app.js",
     "repository": {
@@ -47,5 +45,8 @@
     "bugs": {
         "url": "https://github.com/shivaluma/final-web-project/issues"
     },
-    "homepage": "https://github.com/shivaluma/final-web-project#readme"
+    "homepage": "https://github.com/shivaluma/final-web-project#readme",
+    "devDependencies": {
+        "nodemon": "^2.0.22"
+    }
 }
